dataset1235/2025-2/1955397009/users/209087680/executions/2304143742_4093783519.log
== RUN (2025-09-02 12:46:20)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:44:40)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "sim"
else
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:46:00)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:46:25)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
